--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
           src="./assets/avatar.png"
           alt="foto de Lucas Brandão, usando óculos de sol e camiseta rosa, barba e fundo azul"
         />
-        <p>@lucasbranndao</p>
+        <p>Lucas Brandão</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -28,29 +28,39 @@
       </div>
       <ul>
         <li>
-          <a href="#">Inscrevar - se na NLW</a>
+          <a
+            href="https://lucasbranndao.github.io/gameMarioBros/"
+            target="_blank"
+            >Mario Bros Jump</a
+          >
         </li>
         <li>
-          <a href="#">Baixar meu eBook</a>
+          <a href="https://lucasbranndao.github.io/jogoDaVelha/" target="_blank"
+            >Jogo da Velha</a
+          >
         </li>
         <li>
-          <a href="#">ver meu portfólio</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Conheça o Explorer</a>
+          <a
+            href="https://whatsa.me/5562998684030/?t=Ol%C3%A1,%20vim%20pelo%20DevLinks"
+            target="_blank"
+            >Whatsapp</a
+          >
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://github.com/lucasbranndao" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/lucasbranndao/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a
+          href="https://www.youtube.com/watch?v=1i1673ILdVI&list=PL-_PxegJ2gCkE5ELK3e761mlQ0_vtzph0&ab_channel=GabrielaGomesVEVO"
+          target="_blank"
+        >
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/lucasbranndao/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
