change tag p and format script.js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           alt="foto de Lucas Brandão, usando óculos de sol e camiseta rosa, barba e fundo azul"
         />
         <p>Lucas Brandão</p>
+        <p>
+          Desenvolvedor Front-End | JavaScript | Node |Angular | TypeScript |
+          Git/Github
+        </p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
